syntax = "proto3";

package gitpod.v1;

option go_package = "github.com/gitpod-io/gitpod/components/public-api/go/v1";

message PaginationRequest {
  // Page size is the maximum number of results to retrieve per page.
  // Defaults to 25. Maximum 100.
  int32 page_size = 1;

  string token = 2;
}

message PaginationResponse {
  // Token passed for retreiving the next set of results. Empty if there are no
  // more results
  string next_token = 1;
}

// TODO: Do we want this embedded in the PaginationRequest or standalone for
// messages to include separately?
enum SortOrder {
  SORT_ORDER_UNSPECIFIED = 0;
  SORT_ORDER_ASC = 1;
  SORT_ORDER_DESC = 2;
}

message Sort {
  string field = 1;
  SortOrder order = 2;
}
